# shapes

./: .gitignore  Makefile  README.md  dev-requirements.txt  main.py  pyproject.toml
circle/: circle.py
circle/tests/: test_circle.py
shapes/: __init__.py  triangle.py
shapes/circle/: __init__.py  circle.py
shapes/circle/tests/: __init__.py  test_circle.py
shapes/rectangle/: rectangle.py
shapes/rectangle/tests/: __init__.py  test_rectangle.py
shapes/rectangles/: __init__.py  rectangle.py
shapes/rectangles/tests/: __init__.py  test_rectangle.py
shapes/tests/: test_triangle.py
shapes/triangle/: __init__.py  triangle.py
shapes/triangle/tests/: test_triangle.py
triangle/: triangle.py
triangles/: __init__.py  triangle.py
triangles/tests/: __init__.py  test_triangle.py
